--- a/course_class_files/_config.yml
+++ b/course_class_files/_config.yml
@@ -8,7 +8,7 @@
 title                       : Statistics  # The title of the book. Will be placed in the left navbar.
 author                      : Gul Inan  # The author of the book
 copyright                   : "2022"  # Copyright year to be placed in the footer
-logo                        : logo.png  # A path to the book logo
+logo                        : images/logo.png  # A path to the book logo
 
 repository:
   url: https://github.com/gulinan/mat244e
