--- a/course_class_files/_config.yml
+++ b/course_class_files/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title                       : Statistics  # The title of the book. Will be placed in the left navbar.
+title                       : Spring 2022  # The title of the book. Will be placed in the left navbar.
 author                      : Gül İnan  # The author of the book
 copyright                   : "2022"  # Copyright year to be placed in the footer
 logo                        : images/logo.png  # A path to the book logo
