--- a/course_class_files/_config.yml
+++ b/course_class_files/_config.yml
@@ -18,3 +18,6 @@ html:
   use_repository_button: true
   use_edit_page_button: true
   use_issues_button: true
+launch_buttons:
+  colab_url: "https://colab.research.google.com"
+  notebook_interface: "jupyterlab"  # or "classic"
