--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -8,8 +8,8 @@ parts:
 - caption: LAB MATERIALS
   chapters:
   - file: labs/Week_00/index
-  - file: labs/Week_01/aboutus
+  - file: labs/Week_01/normal_dist
     sections:
-    - file: labs/Week_01//update1
+    - file: labs/Week_01/
 
   
