--- a/course_class_files/_config.yml
+++ b/course_class_files/_config.yml
@@ -21,3 +21,4 @@ html:
 launch_buttons:
   colab_url: "https://colab.research.google.com"
   notebook_interface: "jupyterlab"  # or "classic"
+  thebe: true
