--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -16,6 +16,9 @@ parts:
     - file: labs/Week_01/chisquare
     - file: labs/Week_01/tdist
     - file: labs/Week_01/f_dist
-
+  - file: labs/Week_03/index
+    sections:
+    - file: labs/Week_03/poisson_mle
+    - file: labs/Week_03/normal_mle
 
   
