--- a/course_class_files/_config.yml
+++ b/course_class_files/_config.yml
@@ -22,3 +22,7 @@ launch_buttons:
   colab_url: "https://colab.research.google.com"
   notebook_interface: "jupyterlab"  # or "classic"
   thebe: true
+sphinx:
+  config:
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js  
