--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -1,11 +1,1 @@
-jupyter-book
-ghp-import
-numpy
-pandas
-matplotlib
-sphinx
-ipywidgets
-scipy
-statsmodels
-scikit-learn
-seaborn
+-r ../requirements.txt
