--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -26,4 +26,5 @@ parts:
   - file: labs/Week_05/index
     sections:
     - file: labs/Week_05/consistency
-    - file: labs/Week_05/asymp_mle  
+    - file: labs/Week_05/asymp_mle
+  - file: labs/Homework/gamma_mle   
