--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -27,4 +27,8 @@ parts:
     sections:
     - file: labs/Week_05/consistency
     - file: labs/Week_05/asymp_mle
-  - file: labs/Homework/gamma_mle   
+  - file: labs/Homework/gamma_mle 
+  - file: labs/Week_06/index
+    sections:
+     - file: labs/Week_06/confidence_interval
+     - file: labs/Week_06/width
