--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -39,4 +39,7 @@ parts:
      - file: labs/Week_07/ci_asym
   - file: labs/Week_11/index
     sections:
-     - file: labs/Week_11/single_pop  
+     - file: labs/Week_11/single_pop 
+  - file: labs/Week_13/index
+    sections:
+     - file: labs/Week_13/corr    
