--- a/course_class_files/_toc.yml
+++ b/course_class_files/_toc.yml
@@ -42,4 +42,5 @@ parts:
      - file: labs/Week_11/single_pop 
   - file: labs/Week_13/index
     sections:
-     - file: labs/Week_13/corr    
+     - file: labs/Week_13/corr
+     - file: labs/Week_13/reg    
